# hetzner-secure-infrastructure

./: .ansible-lint  .checkov.baseline  .checkov.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  .tool-versions  .yamllint.yml  CHANGELOG.md  CHANGES_SUMMARY.md  CHERRY_PICK_PLAN.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_FROM_SCRATCH.md  DEPLOY_TO_CODEBERG.md  EXECUTION_GUIDE.md  GO_LIVE_TODAY_CHECKLIST.md  GUIA_RAPIDA.md  LICENSE  MODULARIZATION_PLAN.md  Makefile  POST_DEPLOYMENT.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_PLAN.md  QUICKSTART_TESTING.md  README.md  ROLES_SUMMARY.md  SECURITY.md  SECURITY_REPOSITORY_INTEGRATION.md  SESSION_2026-01-04_SUMMARY.md  (+12 more)
.archive/2026-01-deployment-prep/: DEPLOYMENT.md  DEPLOYMENT_GUIDE_VERBOSE.md  PRODUCTION_READINESS_PLAN.md
.archive/2026-01-root-cleanup/: PRE_DEPLOYMENT_CHECKLIST.md  SESSION_2026-01-04_SUMMARY.md
.archive/completed-plans-2024-12/: CHANGELOG_BEST_PRACTICES.md  DOCS_REVIEW_SUMMARY.md  MODULARIZATION_PLAN.md  README.md  ROLES_SUMMARY.md  SECURITY_FIXES.md  SESSION_SUMMARY.md  TERRAFORM_VALIDATION.md  TESTING.md
.archive/docs-2024-12/: COMMIT_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_REORGANIZATION.md  DOCUMENTATION_STATUS.md  FINAL_SUMMARY.md  INVENTORY_RESTRUCTURE.md  MODULARIZATION_SUMMARY.md  NGINX_MODULAR_CONFIGURATION_PLAN.md  STAGING_DEPLOYMENT.md  TERRAFORM_ANSIBLE_INTEGRATION.md
.archive/root-docs-2026-01/: BENCHMARK_RESULTS_x86_CX23.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md
.github/: CI_CD.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ansible-validate.yml  badges.yml  ci.yml  markdown-lint.yml  security-scan.yml  terraform-validate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.vagrant/bundler/: global.sol
.woodpecker/: SETUP.md  test.yml
ansible/: .ansible-lint-ignore  ansible.cfg  deploy.sh  requirements.yml  rollback-security.yml
ansible/inventory/: README.md  README_INVENTORIES.md  docker.yml  hetzner.hcloud.yml  hetzner.yml  production.yml  staging.yml  terraform-inventory.yml  vagrant.yml
ansible/logs/: .gitkeep  README.md
ansible/playbooks/: common.yml  deploy.yml  dual-wordpress.yml  monitoring.yml  openbao-bootstrap.yml  openbao-transit-bootstrap.yml  openbao.yml  setup-ansible-user.yml  setup-openbao-rotation.yml  site.yml  validate.yml  wordpress-only.yml  wordpress.yml
docs/: ANSIBLE_BEST_PRACTICES.md  APPARMOR.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_SUMMARY.md  BACKUP_RECOVERY.md  CACHING_STACK.md  CLOUDFLARE_SETUP.md  DEPLOYMENT.md  GRUB_SIMPLIFICATION.md  INDEX.md  LOGGING.md  TERRAFORM_ANSIBLE_WORKFLOW.md  TESTING_AND_DR_STRATEGY.md  WHY_NOT_VARNISH.md  YUBIKEY_SETUP.md  deployment-playbook.md
docs/architecture/: SYSTEM_OVERVIEW.md
docs/deployment/: GLOBAL_DEPLOYMENT_STRATEGY.md  OPENBAO_AUTO_UNSEAL_GUIDE.md  SITE_DEPLOYMENT_FLOW.md
docs/guides/: ANSIBLE_BEST_PRACTICES.md  CODEBERG_CICD.md  COMPLETE_TESTING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION_SETUP.md  DEPLOYMENT_GUIDE.md  GRAFANA_ALERTS_TROUBLESHOOTING.md  LOGGING.md  MERMAID_BEST_PRACTICES.md  NGINX_CONFIGURATION_EXPLAINED.md  QUICK_START_ES.md  (+8 more)
guides/: WORDPRESS-POST-INSTALL.md
scripts/: bench_arm64.sh  cleanup-documentation.sh  deploy-full.sh  load-test.py  production-setup-today.sh  run-tests.sh  secure-tfvars.sh  staging-deploy.sh  staging-destroy.sh  validate-all.sh  yubikey-oath-setup.sh
terraform/: .envrc.example  .ssh_config  .terraform.lock.hcl  .tflint.hcl  ARCHITECTURE_SELECTION.md  CLOUDFLARE_TOKEN_SETUP.md  IMPORT_DNS_RECORDS.md  backend.tf  locals.tf  main.tf  outputs.tf  recordsets.tsv  terraform.staging.tfvars.example  terraform.tfvars.example  tfplan  upload-state-to-tfc.sh  variables.tf
(+621 files in other folders)
