# Python Project Configuration
# Using UV package manager: https://github.com/astral-sh/uv

[project]
name = "hetzner-secure-infrastructure"
version = "1.0.0"
description = "Infrastructure as Code for secure Hetzner Cloud deployments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Miguel Alvarez", email = "malpanez@codeberg.org" }
]
maintainers = [
    { name = "Miguel Alvarez", email = "malpanez@codeberg.org" }
]
keywords = ["terraform", "ansible", "hetzner", "infrastructure", "security", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "ansible>=8.0.0",
    "ansible-lint>=6.20.0",
    "molecule>=6.0.0",
    "pytest>=7.4.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings[python]>=0.24.0",
]

testing = [
    "molecule-docker>=2.1.0",
    "testinfra>=9.0.0",
]

[project.urls]
Homepage = "https://codeberg.org/malpanez/twomindstrading_hetzner"
Documentation = "https://codeberg.org/malpanez/twomindstrading_hetzner/src/branch/main/README.md"
Repository = "https://codeberg.org/malpanez/twomindstrading_hetzner"
Issues = "https://codeberg.org/malpanez/twomindstrading_hetzner/issues"
Changelog = "https://codeberg.org/malpanez/twomindstrading_hetzner/src/branch/main/CHANGELOG.md"
"CI/CD" = "https://ci.codeberg.org/malpanez/twomindstrading_hetzner"
Security = "https://codeberg.org/malpanez/twomindstrading_hetzner/src/branch/main/SECURITY.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ansible-lint>=6.20.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
